--- a/CSS/Curiosidades y Teorias.css
+++ b/CSS/Curiosidades y Teorias.css
@@ -1,5 +1,88 @@
-.slackey-regular {
-    font-family: "Slackey", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
+.CuriosidadesyTeorias{
+  margin: 0 50px 50px 0;
+} 
+
+#tituloCyT{
+  margin: 10px;
+  -webkit-text-stroke: 0.2px black;
+  color: #fdde00;
+  text-shadow:
+    -3px 3px 0 #c3b11e,
+    1px 1px 0 #c3b11e,  
+    1px 2px 0 #c3b11e,
+    1px 1px 0 #c3b11e,
+    1px 1px 0 #c3b11e;
+}/*titulo de la seccion*/
+
+.container{
+  border: 4px solid #42404084;
+  background-color: #42404024;
+  border-radius:  20px;
+  display: inline-flex;
+  margin: 10px;
+  padding: 20px;
+  width: 100%;
+  height: fit-content;
+  position: center;
+  text-align: justify;
+}/*contendor de las tarjetas*/
+
+.curiosidad5 h3,
+.curiosidad5 p {
+  color:black;
+  font-size: 10px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 20px auto;
+  width: 80%;
+}
+
+.curiosidad4 h3,
+.curiosidad4 p {
+  color:black;
+  font-size: 10px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 20px auto;
+  width: 80%;
+}
+
+.curiosidad3 h3,
+.curiosidad3 p {
+  color:black;
+  font-size: 10px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 20px auto;
+  width: 80%;
+}
+
+.curiosidad2 h3,
+.curiosidad2 p {
+  color:black;
+  font-size: 10px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 20px auto;
+  width: 80%;
+}
+
+.curiosidad1 h3,
+.curiosidad1 p {
+  color:black;
+  font-size: 10px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 20px auto;
+  width: 80%;
+}
