--- a/CSS/Curiosidades y Teorias.css
+++ b/CSS/Curiosidades y Teorias.css
@@ -1,42 +1,97 @@
+/*Curiosidades y teorias*/
 .CuriosidadesyTeorias{
-  margin: 0 50px 50px 0;
-} 
+  margin: 40px 40px 40px 10px;
+}
 
-#tituloCyT{
-  margin: 10px;
+.tituloconfondo {
+  background-image: url("Imagenes/Titulo.png"); /* URL de la imagen del banner */
+  background-size: 675px 273px; /* Ajustar la imagen al contenedor */
+  display: flex;
+}
+
+#tituloCyT {
+  margin: 20px 0px 50px 20px;
   -webkit-text-stroke: 0.2px black;
   color: #fdde00;
   text-shadow:
     -3px 3px 0 #c3b11e,
-    1px 1px 0 #c3b11e,  
+    1px 1px 0 #c3b11e,
     1px 2px 0 #c3b11e,
     1px 1px 0 #c3b11e,
     1px 1px 0 #c3b11e;
 }/*titulo de la seccion*/
 
-.container{
-  border: 4px solid #42404084;
-  background-color: #42404024;
-  border-radius:  20px;
-  display: inline-flex;
-  margin: 10px;
+/*delimitar un tamaño fijo para cada caja*/
+.imagenTarjetas{
+  display: block; /* Para que la imagen se comporte como un bloque */
+  margin: auto; /* Centrar horizontalmente */
+  width: 200px; /* Ajustar el ancho según sea necesario */
+  height: auto; /* Mantener la relación de aspecto de la imagen */
+}
+
+.container {
+  /*border: 10px solid #00000039;*//*borde para el contenedor*/
+  background-color: #0808081b;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  /*flex-direction: column;*/
+  margin: 15px; /* Ajusta el margen si deseas espacio */
   padding: 20px;
-  width: 100%;
+  width: auto;
+  font-size: 10px;
   height: fit-content;
   position: center;
   text-align: justify;
+  overflow-x: auto; /*Barra deslizante*/
 }/*contendor de las tarjetas*/
+/*estilizando la barra*/
+
+
+.container::-webkit-scrollbar {
+  width: 300px;
+  height: 7px;
+  overflow-x: scroll;
+  scrollbar-width: thin;
+  position: fixed;
+}
+
+.container::-webkit-scrollbar-thumb {
+  background: #535252c9; /* Color del thumb (agarre) */
+  border-radius: 90px; /* Hace el thumb redondo */
+}
+
+.container::-webkit-scrollbar-track {
+  background: #ffffff; /* Color de fondo de la pista */
+  border-radius: 90px;
+}
+
+@media (max-width: 1000px) {
+  .container{
+    flex-direction: column;
+  }
+}/*responsive, delimitar los nuevos parametros para responsive*/
 
 .curiosidad5 h3,
 .curiosidad5 p {
+
   color:black;
   font-size: 10px;
   margin-bottom: 20px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 20px auto;
+  margin: 20px auto; 
   width: 80%;
+}
+
+.curiosidad5{
+  border: 1px solid black;
+  margin: 20px 60px;
+  border-radius: 6px;
+  width: 225px;
+  height: 340px;
+  box-sizing: border-box;
 }
 
 .curiosidad4 h3,
@@ -49,6 +104,14 @@
   justify-content: space-between;
   margin: 20px auto;
   width: 80%;
+}
+.curiosidad4{
+  border: 1px solid black;
+  margin: 20px 60px;
+  border-radius: 6px;
+  width: 225px;
+  height: 340px;
+  box-sizing: border-box;
 }
 
 .curiosidad3 h3,
@@ -63,6 +126,14 @@
   width: 80%;
 }
 
+.curiosidad3{
+  border: 1px solid black;
+  margin: 20px 60px;
+  border-radius: 6px;
+  width: 225px;
+  height: 340px;
+  box-sizing: border-box;
+}
 .curiosidad2 h3,
 .curiosidad2 p {
   color:black;
@@ -73,6 +144,14 @@
   justify-content: space-between;
   margin: 20px auto;
   width: 80%;
+}
+.curiosidad2{
+  border: 1px solid black;
+  margin: 20px 60px;
+  border-radius: 6px;
+  width: 225px;
+  height: 340px;
+  box-sizing: border-box;
 }
 
 .curiosidad1 h3,
@@ -86,3 +165,14 @@
   margin: 20px auto;
   width: 80%;
 }
+
+.curiosidad1 {
+  border: 1px solid black; /* Estilo de borde existente */
+  margin: 20px 60px; /* Espacio entre tarjetas */
+  border-radius: 6px; /* Redondeo de esquinas */
+  width: 225px; /* Ancho fijo */
+  height: 340px; /* Altura fija*/
+  box-sizing: border-box; /* Incluir el borde en el tamaño */
+}
+/*Fin de Curiosidades y Teorias*/
+
