Delimite los espacios para las demas secciones

--- a/CSS/Curiosidades y Teorias.css
+++ b/CSS/Curiosidades y Teorias.css
@@ -1,3 +1,8 @@
+/*Impacto-cultural*/
+.Impacto-cultural{
+  
+}
+
 /*Curiosidades y teorias*/
 .CuriosidadesyTeorias{
   margin: 40px 40px 40px 10px;
@@ -175,4 +180,9 @@
   box-sizing: border-box; /* Incluir el borde en el tamaño */
 }
 /*Fin de Curiosidades y Teorias*/
+
+/*memes*/
+.memes{
+
+}
 
