--- a/CSS/Personajes.css
+++ b/CSS/Personajes.css
@@ -1,39 +1,97 @@
 .container {
     display: flex; /* Activate Flexbox for the container */
+    flex-direction: row;
+    overflow-x: auto;
+   
   }
   
   .div1  {
-    flex: 2; 
+    flex: 1; 
     border: 2px solid black; 
     border-radius: 10px; 
-    margin: 50px;
+    margin: 20px;
     text-align: center; 
     font-size: 16px; 
-    width: 5px;
+    width: 400px;
     height: 350px;
     background-color:rgba(19, 134, 198, 0.22);
   }
   .div2  {
-    flex: 2; 
+    flex: 1; 
     border: 2px solid black; 
     border-radius: 10px; 
-    margin: 50px;
+    margin:  20px;
     text-align: center; 
     font-size: 16px; 
-    width: 5px; 
+    width: 300px; 
     height: 350px;
     background-color:rgba(253, 204, 57, 0.29);
   }
   .div3  {
-    flex: 2; 
+    flex: 1; 
     border: 2px solid black; 
     border-radius: 10px; 
-    margin: 50px;
+    margin:  20px;
     text-align: center; 
     font-size: 16px; 
-    width: 5px; 
+    width: 300px; 
     height: 350px;
     background-color:rgba(255, 84, 95, 0.38);
+  }
+  .div4  {
+    flex: 1; 
+    border: 2px solid black; 
+    border-radius: 10px; 
+    margin: 20px;
+    text-align: center; 
+    font-size: 16px; 
+    width: 300px; 
+    height: 350px;
+    background-color:rgba(65, 212, 28, 0.38);
+  }
+  .div5  {
+    flex: 1; 
+    border: 2px solid black; 
+    border-radius: 10px; 
+    margin: 20px;
+    text-align: center; 
+    font-size: 16px; 
+    width: 300px;
+    height: 350px;
+    background-color:rgba(19, 134, 198, 0.22);
+  }
+  .div6  {
+    flex: 1; 
+    border: 2px solid black; 
+    border-radius: 10px; 
+    margin: 20px;
+    text-align: center; 
+    font-size: 16px; 
+    width: 300px; 
+    height: 350px;
+    background-color:rgba(249, 153, 9, 0.38);
+  }
+  .div7  {
+    flex: 1; 
+    border: 2px solid black; 
+    border-radius: 10px; 
+    margin: 20px;
+    text-align: center; 
+    font-size: 16px; 
+    width: 300px; 
+    height: 350px;
+    background-color:rgba(253, 204, 57, 0.29);
+  }
+  .div8  {
+    flex: 1; 
+    border: 2px solid black; 
+    border-radius: 10px; 
+    margin:  20px;
+    text-align: center; 
+    font-size: 16px; 
+    width: 300px; 
+    height: 350px;
+    background-color:rgba(19, 134, 198, 0.4);
   }
   .Bob  {
     flex: 2; 
@@ -54,6 +112,51 @@
     line-height: 1.5;
   }
   .calamardo  {
+    flex: 2; 
+    border: 2px;
+    margin: 10px;
+    text-align: justify; 
+    font-size: 20px;
+    font-family: 'Bubblegum Sans';
+    line-height: 1.5;
+  }
+  .cangrejo  {
+    flex: 2; 
+    border: 2px;
+    margin: 10px;
+    text-align: justify; 
+    font-size: 20px;
+    font-family: 'Bubblegum Sans';
+    line-height: 1.5;
+  }
+  .arenita  {
+    flex: 2; 
+    border: 2px;
+    margin: 10px;
+    text-align: justify; 
+    font-size: 20px;
+    font-family: 'Bubblegum Sans';
+    line-height: 1.5;
+  }
+  .señora  {
+    flex: 2; 
+    border: 2px;
+    margin: 10px;
+    text-align: justify; 
+    font-size: 20px;
+    font-family: 'Bubblegum Sans';
+    line-height: 1.5;
+  }
+  .sheldon  {
+    flex: 2; 
+    border: 2px;
+    margin: 10px;
+    text-align: justify; 
+    font-size: 20px;
+    font-family: 'Bubblegum Sans';
+    line-height: 1.5;
+  }
+  .karen  {
     flex: 2; 
     border: 2px;
     margin: 10px;
