--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -62,3 +62,14 @@ p {
     font-size: 30px;
     margin-bottom: 10px;
 }
+
+#titulos-principales {
+    -webkit-text-stroke: 0.2px black;
+    color: #fdde00;
+    text-shadow:
+      -3px 3px 0 #c3b11e,
+      1px 1px 0 #c3b11e,
+      1px 2px 0 #c3b11e,
+      1px 1px 0 #c3b11e,
+      1px 1px 0 #c3b11e;
+  }/*texto de los titulos*/
