--- a/CSS/Trama.css
+++ b/CSS/Trama.css
@@ -20,9 +20,8 @@
     margin-left: auto;
     margin-right: auto;
 }
-.trama
-{
-text-align: center;
+.centrado {
+text-align:center;
 }
 .bordes {
   
