--- a/CSS/Impacto-Cultural.css
+++ b/CSS/Impacto-Cultural.css
@@ -1,8 +1,8 @@
 .Impacto-cultural
 {
-    background-color: #0808081b;
+    border: 18px solid #6b6b6b9c; 
+    background-color: rgba(37, 158, 222, 0.216);
     border-radius: 20px;
-    display: flex;
     flex-direction: row;
     margin: 15px;
     padding: 20px;
@@ -14,8 +14,11 @@
 }
 .titulo-impactocultural
 {
-    position: top;
-    background-position: center;
+    position: absolute;
+    top: 10%; 
+    left: 50%; 
+    transform: translate(-50%, -50%);
+    text-align: center;
     margin: 0px 100px;
     -webkit-text-stroke: 1.3px black;
     color: #fdde00;
@@ -27,20 +30,20 @@
       1px 1px 0 #c3b11e;
 }
 
+
 .primer-parrafo 
 {
-    border: 0px;
     margin: 70px 50px;
     border-radius: 10px;
-    width: 250px;
+font-size: 10rem;
     min-width: 1089px;
     min-height: 500px;
     box-sizing: content-box;
-    font-size: xx-small;
     position: absolute;
     top: 20px; 
     left: 50px; 
     z-index: 1;
+    left:0;
     
 }
 .segundo-parrafo 
@@ -54,5 +57,6 @@
     min-height: 400px;
     box-sizing: content-box;
     position: right;
+    right:0;
 }
 
