--- a/CSS/Personajes.css
+++ b/CSS/Personajes.css
@@ -1,8 +1,9 @@
-.container {
+.containerpersonajes {
     display: flex; /* Activate Flexbox for the container */
     flex-direction: row;
     overflow-x: auto;
-
+    background-color: #0808081b;
+    border-radius: 20px;
    
   }
 
@@ -168,5 +169,9 @@
     font-family: 'Bubblegum Sans';
     line-height: 1.5;
   }
+
+   .titulo-seccion{
+    text-align: center; 
+   }
 
   
