Se delimito el ancho de  la pantalla
Se ajustio la panttalla para evitar sobrantes

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -9,6 +9,11 @@ header {
     padding: 20px;
 }
 
+.html{
+    min-height: 160%;
+  position: relative;
+   /* height: 100%;*/
+}
 .banner {
     text-align: center;
 }
