--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -67,3 +67,37 @@ p {
     font-size: 30px;
     margin-bottom: 10px;
 }
+
+
+
+
+.html {
+    box-sizing: border-box; /* NOS SIRVE PARA QUE NO HAYA EXTRA DE PANTALLA */
+    font-size: 62.5%; /* AJUSTA LA LETRA DEPENDIENDO DEL ANCHO PERO AUN ASI HAY QUE AJUSTAR CADA SECCION  SI ES NECESARIO*/
+}
+
+
+
+.body {
+    min-height: 100vh; /*EstablecE la altura mínima de la  */
+    margin: 0; /* quita el margen que tiene predeterminado  */
+    padding: 0; /* quita el espaciamiento interno */
+  
+}
+
+
+@media (max-width: 768px) {
+  
+    .body {
+        font-size: 80%; 
+        
+    }
+}
+
+@media (max-width: 480px) {
+   
+    .body {
+        font-size: 60%; 
+    }
+}
+  
