--- a/CSS/Trama.css
+++ b/CSS/Trama.css
@@ -1,6 +1,5 @@
 .parrafos
 {
- 
     columns: 200px 2;
     column-gap: 100px;
     padding: 25px;
@@ -11,7 +10,10 @@
     justify-content: center;
     margin-bottom: 20px; /* Espacio entre la imagen y el párrafo */
 }
-
+.letra{
+    font-size: 40px;
+    font-family: 'Bubblegum Sans';
+}
 .img01 {
     width: 800px;
     height: 300px;
@@ -30,7 +32,7 @@ text-align:center;
     display: inline-flex;
     margin: 10px;
     padding: 15px;
-    width: 98%;
+    min-width: 100;
     height: fit-content;
     position: relative;
     text-align: center;
