--- a/CSS/Personajes.css
+++ b/CSS/Personajes.css
@@ -17,7 +17,7 @@
     text-align: center; 
     font-size: 16px; 
     min-width: 300px;
-    height: 350px;
+    height: 360px;
     background-color:rgba(19, 134, 198, 0.22);
   }
   .div2  {
@@ -28,7 +28,7 @@
     text-align: center; 
     font-size: 16px; 
     min-width: 300px;
-    height: 350px;
+    height: 360px;
     background-color:rgba(253, 204, 57, 0.29);
   }
   .div3  {
@@ -39,7 +39,7 @@
     text-align: center; 
     font-size: 16px; 
     min-width: 300px;
-    height: 350px;
+    height: 360px;
     background-color:rgba(255, 84, 95, 0.38);
   }
   .div4  {
@@ -50,7 +50,7 @@
     text-align: center; 
     font-size: 16px; 
     min-width: 300px;
-    height: 350px;
+    height: 360px;
     background-color:rgba(65, 212, 28, 0.38);
   }
   .div5  {
@@ -61,7 +61,7 @@
     text-align: center; 
     font-size: 16px; 
     min-width: 300px;
-    height: 350px;
+    height: 360px;
     background-color:rgba(249, 153, 9, 0.38);
   }
   .div6  {
@@ -72,7 +72,7 @@
     text-align: center; 
     font-size: 16px; 
     min-width: 300px;
-    height: 350px;
+    height: 360px;
     background-color:rgba(115, 47, 168, 0.38);
   }
   .div7  {
@@ -83,7 +83,7 @@
     text-align: center; 
     font-size: 16px; 
     min-width: 300px;
-    height: 350px;;
+    height: 360px;;
     background-color:rgba(253, 204, 57, 0.29);
   }
   .div8  {
@@ -94,7 +94,7 @@
     text-align: center; 
     font-size: 16px; 
     min-width: 300px;
-    height: 350px;
+    height: 360px;
     background-color:rgba(19, 134, 198, 0.4);
   }
   .Bob  {
@@ -104,7 +104,7 @@
     text-align: justify; 
     font-size: 20px;
     font-family: 'Bubblegum Sans';
-    line-height: 1.5;
+    line-height: 1.2;
   }
   .patricio  {
     flex: 1; 
@@ -113,7 +113,7 @@
     text-align: justify; 
     font-size: 20px;
     font-family: 'Bubblegum Sans';
-    line-height: 1.5;
+    line-height: 1.2;
   }
   .calamardo  {
     flex: 1; 
@@ -122,7 +122,7 @@
     text-align: justify; 
     font-size: 20px;
     font-family: 'Bubblegum Sans';
-    line-height: 1.5;
+    line-height: 1.2;
   }
   .cangrejo  {
     flex: 1; 
@@ -131,7 +131,7 @@
     text-align: justify; 
     font-size: 20px;
     font-family: 'Bubblegum Sans';
-    line-height: 1.5;
+    line-height: 1.2;
   }
   .arenita  {
     flex: 1; 
@@ -149,7 +149,7 @@
     text-align: justify; 
     font-size: 20px;
     font-family: 'Bubblegum Sans';
-    line-height: 1.5;
+    line-height: 1.2;
   }
   .sheldon  {
     flex: 1; 
@@ -158,7 +158,7 @@
     text-align: justify; 
     font-size: 20px;
     font-family: 'Bubblegum Sans';
-    line-height: 1.5;
+    line-height: 1.2;
   }
   .karen  {
     flex: 1; 
@@ -167,11 +167,30 @@
     text-align: justify; 
     font-size: 20px;
     font-family: 'Bubblegum Sans';
-    line-height: 1.5;
+    line-height: 1.2;
   }
 
    .titulo-seccion{
     text-align: center; 
+   }
+
+   .titulosdivs{
+    text-align: center; 
+    font-size: 20px;
+    font-family: "Slackey", sans-serif;
+    margin: 5px;
+    line-height: 0%;
+   }
+   
+   .imagenespersonajes{
+    width: 60%;
+      height: 57%;
+      margin: 5px;
+   }
+   .imagencalamardo{
+    width: 30%;
+    height: 50%;
+    margin: 5px;
    }
 
   
