--- a/CSS/Curiosidades y Teorias.css
+++ b/CSS/Curiosidades y Teorias.css
@@ -11,7 +11,7 @@
 
 /*Titulo*/
 .contenedor-titulo-cyt {
-  margin-top: 1.3%;
+  margin-top: 1%;
   margin-left: -2%;
   width: 500px;
   height: 150px;
@@ -20,8 +20,9 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-
- }/*imagen del titulo*/
+  z-index: 2;
+  gap: 2%;
+}/*imagen del titulo*/
 
 #fondo-titulo {
   width: 435px; /*imagen de fondo*/
@@ -72,24 +73,26 @@
 .imagenTarjetas {
   display: block; /* Para que la imagen se comporte como un bloque */
   margin: auto; /* Centrar horizontalmente */
-  width: 200px; /* Ajustar el ancho según sea necesario */
+  width: 100%; /* Ajustar el ancho según sea necesario */
   height: auto; /* Mantener la relación de aspecto de la imagen */
 }
 
 .contenedor-curiosidades {
-  /*border: 10px solid #00000039;*//*borde para el contenedor*/
-  background-color: #0808082f;
+  border: 10px solid #00000039;
+  backdrop-filter: blur(0.38rem);
+  -webkit-backdrop-filter: blur(0.35rem);
+  background: #9590902b;
   border-radius: 20px;
   display: flex;
   flex-direction: row;
-  margin: 15px; /* Ajusta el margen si deseas espacio */
   padding: 20px;
   width: auto;
   font-size: 10px;
-  height: fit-content;
+  height: auto;
   position: center;
   text-align: justify;
-  overflow-x: auto; /*Barra deslizante*/
+  overflow-x: auto; 
+  gap: 70px;/*Barra deslizante*/
 }/*contendor de las tarjetas*/
 /*estilizando la barra*/
 
@@ -135,12 +138,13 @@
 /*tarjeta*/
 .curiosidad5 {
   border: 4px rgba(253, 204, 57);
-  margin: 90px 0px 15px 0px;
+  margin-left: 20px;
+  margin-top: 40px;
   border-radius: 15px;
   width: 250px;
   min-width: 280px;
-  min-height: 400px;
-  box-sizing: border-box;
+  min-height: 600px;
+ 
   background-color: rgba(253, 204, 57, 0.4);
 }
 
@@ -158,7 +162,6 @@
 }
 .curiosidad4{
   border: 4px rgba(19, 134, 198);
-  margin: 20px 60px;
   border-radius: 15px;
   width: 250px;
   min-width: 280px;
@@ -182,7 +185,6 @@
 
 .curiosidad3{
   border: 4px rgba(78, 113, 151);
-  margin: 20px 60px;
   border-radius: 15px;
   width: 250px;
   min-width: 280px;
@@ -204,7 +206,6 @@
 }
 .curiosidad2{
   border: 4px rgba(255, 84, 95);
-  margin: 20px 60px;
   border-radius: 15px;
   width: 250px;
   min-width: 280px;
@@ -228,7 +229,6 @@
 
 .curiosidad1 {
   border: 4px rgba(132, 207, 187); /* Estilo de borde existente */
-  margin: 20px 60px; /* Espacio entre tarjetas */
   border-radius: 15px; /* Redondeo de esquinas */
   width: 250px;
   min-width: 280px;
