--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -5,8 +5,13 @@
 }
 
 body {
+    background-image: linear-gradient(rgba(255, 255, 255, 0.512), rgba(255, 255, 255, 0.485)),url("/CSS/Imagenes/VERSHHH.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
     font-family: "Slackey", sans-serif;
-    font-weight: 400;
+    font-family: "Slackey", sans-serif;
+    font-weight: 200;
     font-style: normal;
 }
 
