--- a/CSS/body.css
+++ b/CSS/body.css
@@ -1,5 +1,9 @@
 .slackey-regular {
-    font-family: "Slackey", sans-serif;
-    font-weight: 400;
-    font-style: normal;
+  background-image: url("/CSS/Imagenes/VERSHHH.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: "Slackey", sans-serif;
+  font-weight: 200;
+  font-style: normal;
   }
