--- a/CSS/Curiosidades-y-Teorias.css
+++ b/CSS/Curiosidades-y-Teorias.css
@@ -1,6 +1,6 @@
 /*Curiosidades y teorias*/
 .CuriosidadesyTeorias {
-  margin: 40px 0px 0px 20px;/*top, right, bottom, left*/
+  margin: 80px 0px 40px 20px;/*top, right, bottom, left*/
 }/*Estilo de toda la seccion de Curiosidades*/
 
 ::before, ::after {
@@ -113,7 +113,7 @@
 
 /*Tarjetas*/
 /*texto tarjetas*/
-#titulo-card {
+.titulo-card {
   align-items: center;
   justify-content: center;
   text-align: center;
