--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -2,6 +2,13 @@ body {
     font-family: "Slackey", sans-serif;
     font-weight: 400;
     font-style: normal;
+    background: linear-gradient(rgba(255, 255, 255, 0.489), rgba(255, 255, 255, 0.544)),url("/CSS/Imagenes/fondo.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: "Slackey", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 header {
