Modificaciones de margenes a diferentes hojas de estilos

--- a/CSS/Historia.css
+++ b/CSS/Historia.css
@@ -1,3 +1,7 @@
+.Historia {
+    margin: 80px 0px 40px 20px;/*top, right, bottom, left*/
+}
+
 .contenerh {
     min-width: 1000px;
     min-height: 500px;
@@ -21,6 +25,7 @@
     height: 400px;
     line-height: 110px;
     text-align: center;
+    justify-content: center;
     border: 1px solid rgba(0, 0, 0, 0);
     background-color: rgba(30, 30, 30, 0);
     margin-left: 10px;
