--- a/CSS/Personajes.css
+++ b/CSS/Personajes.css
@@ -1,3 +1,7 @@
+.Personajes {
+  margin: 80px 20px 40px 15px;/*top, right, bottom, left*/
+}
+
 .containerpersonajes {
     display: flex; /* Activate Flexbox for the container */
     flex-direction: row;
